tests/neg-custom-args/captures/scope-extrude-mut.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrude-mut.scala:10:8 -----------------------------
10 |    a = a1  // error
   |        ^^
   |        Found:    (a1 : A^)
   |        Required: A^²
   |
   |        Note that capability a1 is not included in capture set {any}
   |        because (a1 : A^) in method b is not visible from any in variable a.
   |
   |        where:    ^          refers to a root capability in the type of value a1
   |                  ^² and any refer to a root capability in the type of variable a
   |
   | longer explanation available when compiling with `-explain`
